fix: implement margin-right to fix the invisible trouble of the 3 dots

--- a/2026_03_15/corporet.css
+++ b/2026_03_15/corporet.css
@@ -137,7 +137,7 @@ h1{
         cursor: pointer;
         z-index: 1001;
         position: relative;
-
+        margin-right:2rem;
         background: radial-gradient(circle, #333 2px, transparent 2.5px);
         background-size: 100% 33%;
         border:3px solid blue;
